--- a/styles/style.css
+++ b/styles/style.css
@@ -15,17 +15,17 @@ body {
 header {
     background-color: white;
     width: 100%;
-    min-height: 8%;
-    position: fixed;
+    min-height: 60px;
     z-index: 1;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
 }
 
 #home {
     display: block;
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    height: calc(100% - 60px);
     text-align: center;
+    padding: 5%;
 }
 
 .vertical-align {
@@ -37,8 +37,14 @@ header {
 img#logo-home {
     border-radius: 41px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.479);
+    max-width: 100%;
 }
 
-div {
+div#text-page {
     height: 3000px;
+    background-image: url("../img/fundo_text-page.png");
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
