--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,6 @@
     src: url(../fonts/BerkshireSwash-Regular.ttf);
 }
 
-html, body, main {
-    height: 100%;
-}
 
 body {
     background-image: url("../img/background.jpg");
@@ -27,7 +24,6 @@ header {
 #home {
     display: block;
     max-width: 100%;
-    height: calc(100% - 60px);
     text-align: center;
 }
 
@@ -82,16 +78,46 @@ p, ul {
 li::before {content: "• "; color:black}
 
 #minha-foto {
-    max-width: 440px;
     display: inline-block;
     margin-left: 16px;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.500);
 }
+
 
 .contato {
     font-size: 30px;
 }
 
-#telefone, #whatsapp {
+#whatsapp {
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+    border-radius: 20px;
+}
+
+#whatsapp:hover {
+    background-color: lightgreen;
+    cursor: pointer;
+}
+
+#telefone, #img_whatsapp {
     display: inline-block;
     vertical-align: middle;
+}
+
+footer {
+    height: 80px;
+    position: relative;
+}
+
+#rodape {
+    background-color: lightblue;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    border-radius: 30px;
 }
