--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
-@charset "UTF-8";
+:root {
+    --header-height: 60px;
+}
+
 
 @font-face {
     font-family: "Berkshire-Swash";
@@ -16,7 +19,7 @@ body {
 header {
     background-color: white;
     width: 100%;
-    height: 60px;
+    height: var(--header-height);
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
     padding: 0 10px;
 }
@@ -29,7 +32,7 @@ div.caixa {
 
 img#logo-header {
     display: inline;
-    margin-top: 5px;
+    margin-top: calc((var(--header-height) - 50px)/2);
 }
 
 nav {
@@ -99,9 +102,10 @@ section#sobre-mim {
 }
 
 img#img-sobre-mim {
+    max-width: 100%;
     float: left;
     border-radius: 20px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.500);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.500);
     margin: 20px;
     transition: 0.5s;
 }
