--- a/styles/style.css
+++ b/styles/style.css
@@ -20,14 +20,14 @@ header {
     background-color: white;
     width: 100%;
     height: var(--header-height);
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.438);
-    padding: 0 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
 }
 
 div.caixa {
     max-width: 900px;
     margin: 0 auto;
     position: relative;
+    padding: 0 10px;
 }
 
 img#logo-header {
@@ -93,12 +93,10 @@ h2.berkshire {
     font-family: Berkshire-Swash;
     color: #BE5C00;
     font-size: 80px;
-    margin-bottom: 30px;
 }
 
 section#sobre-mim {
-    padding: 10px;
-    margin-bottom: 30px;
+    margin: 30px 0;
 }
 
 img#img-sobre-mim {
@@ -106,7 +104,8 @@ img#img-sobre-mim {
     float: left;
     border-radius: 20px;
     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.500);
-    margin: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
     transition: 0.5s;
 }
 
@@ -115,7 +114,7 @@ img#img-sobre-mim:hover {
 }
 
 section#txt-sobre-mim {
-    margin: 20px;
+    text-align: justify;
 }
 
 p, ul {
