--- a/styles/style.css
+++ b/styles/style.css
@@ -50,13 +50,13 @@ header nav a {
 }
 
 header nav a:hover {
-    background-color: rgba(0, 0, 255, 0.5);
-    color: black;
-    box-shadow: 2px 2px 0px rgb(0, 0, 200);
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    box-shadow: 2px 2px 0px rgb(0, 0, 0);
 }
 
 header nav a:active {
-    box-shadow:2px 2px 0px rgb(0, 0, 200) inset;
+    box-shadow:2px 2px 0px rgb(0, 0, 0) inset;
 }
 
 section#home {
